Fixed a bug where the search suggestions were no longer showing up and added a scroll for suggestions in case it was too long

--- a/calendrive/src/search_bar/searchBar.css
+++ b/calendrive/src/search_bar/searchBar.css
@@ -68,6 +68,8 @@
     border: 1px solid black;
     border-top: none;
     padding: 0;
+    overflow: auto;
+    height: 15vw;
 }
 
 .evsuggestions:hover {
